:meat_on_bone: workgin towards an IE fix for a subscribe button overlap

--- a/src/styles/components/_emailSubscription.scss
+++ b/src/styles/components/_emailSubscription.scss
@@ -69,9 +69,7 @@
       @include Kievit-Book;
       display: block;
       font-size: 14px;
-      height: 1em;;
       margin-top: 20px;
-      
 
       a {
         border-bottom: 1px solid #fff;
